Integrate more views and better structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <custom-header class="col-md-12"></custom-header>
+<!-- We have home component becouse in the future we could have a login functionallity and other screens so here must be router that changes the screen and the home just to be starting one-->
 <home [users]=users></home>
+<!-- The user modal interactions -->
+<users-modal></users-modal>
