--- a/src/app/components/user_list/user_list.component.css
+++ b/src/app/components/user_list/user_list.component.css
@@ -1,10 +1,13 @@
-user {
-    cursor: pointer;
-    display: table-row;
-}
-
 table {
     text-align: center;
+}
+
+table tbody {
+    cursor: pointer;
+}
+
+table tbody tr:hover {
+    background-color: lightgray;
 }
 
 table tfoot td {
