--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -50,3 +50,5 @@
 // Utility classes
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
+// Bootstrap gluphs
+@import "bootstrap-glyps";
