Integrate basic structure for the event providing system

--- a/src/app/basic_components/header/header.component.html
+++ b/src/app/basic_components/header/header.component.html
@@ -5,8 +5,8 @@
     </li>
     <li class="flag" (click)="changeLanguage()">
       <img 
-        [src]="'./src/img/' + language.nextLanguage() + '.png'"
-        [alt]="language.language"/>
+        [src]="'./src/img/' + dictionary.nextLanguage() + '.png'"
+        [alt]="dictionary.language"/>
     </li>
   </ul>
 </header>
