--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -6,10 +6,10 @@
   [typeaheadOptionsLimit]="7"
   (typeaheadOnSelect)="onProductSelect($event)"
   class="form-control"
-  placeholder="{{language.getTexts('searchFor')}}">
+  placeholder="{{dictionary.getTexts('searchFor')}}">
 
 <template #customItemTemplate let-model="item" let-index="index">
   <h5>
-    <span>{{model.title[language.language]}}</span>
+    <span>{{model.title[dictionary.language]}}</span>
   </h5>
 </template>
