--- a/src/app/basic_components/user_form/user_form.component.css
+++ b/src/app/basic_components/user_form/user_form.component.css
@@ -10,7 +10,10 @@
     padding: 0;
 }
 
-button {
-    margin-top: 50px;
-    width: 100%;
+button, label {
+    margin-top: 10px;
+}
+
+label {
+    padding-left: 5px;
 }
