--- a/src/app/basic_components/user_form/user_form.component.html
+++ b/src/app/basic_components/user_form/user_form.component.html
@@ -1,5 +1,5 @@
 <div class="form-section">
-  <form  #feedback="ngForm" (ngSubmit)="onSubmit(ngForm, 'submit')" [formGroup]="ngForm">
+  <form  #feedback="ngForm" (ngSubmit)="onSubmit(ngForm, 'create')" [formGroup]="ngForm">
     <div class="form-group">
      <div class="col-xs-12">
         <label for="firstName">{{ dictionary.getTexts('firstName') }}</label>
