--- a/src/app/components/user_list/user_list.component.css
+++ b/src/app/components/user_list/user_list.component.css
@@ -14,3 +14,11 @@ table tfoot td {
     text-align: right;
     padding-right: 20px;
 }
+
+table thead td span.column-header:hover ~ span.glyphicon-sort {
+  display: inline;
+}
+
+table thead td span.glyphicon-sort {
+  display: none;
+}
