Improve the logic of the app. Integrate better error handling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,5 @@
 <home></home>
 <!-- The user modal interactions -->
 <users-modal></users-modal>
+<!-- The toaster container for user information -->
+<toaster-container></toaster-container>
