--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,13 +1,10 @@
 // Core variables and mixins
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables";
-
-// EPOD variables and mixins
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
 
 // Reset and dependencies
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/normalize";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/print";
-// @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/glyphicons";
 
 // Core CSS
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
@@ -46,6 +43,7 @@
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tooltip";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/popovers";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/carousel";
+@import "../../node_modules/angular2-toaster/lib/toaster";
 
 // Utility classes
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
