Handle the missing style

--- a/src/app/sass/style.scss
+++ b/src/app/sass/style.scss
@@ -50,3 +50,4 @@
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
 // Bootstrap gluphs
 @import "./bootstrap-glyps";
+@import "../app.component";
